--- a/css/styles.css
+++ b/css/styles.css
@@ -27,8 +27,7 @@ address{
      padding-left: 15px;
      padding-right: 15px;
      margin: 0 auto;
-     background-color: rgb(0, 4, 255);
-     
+     /* background-color: #24b8ab; */
     }
 /*--------------------------header----------------------------------------*/
 
@@ -228,6 +227,13 @@ address{
     letter-spacing: 0.02em;
 
 }
+.text-profil{
+    padding-top: 32px;
+    padding-bottom: 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: center
+}
 /*--------------------------FOOTHER---------------------------------------*/
 .footer {
     background-color: #2e2f42;
@@ -237,7 +243,7 @@ address{
 }
 .footer-studio {
    color: #f4f4fd;
-   
+
 }
 .footer-text{
     font-family: 'Roboto';
@@ -250,11 +256,27 @@ address{
 }
 .footer-link {
     margin-bottom: 16px;
+}
+.tst{
+  
+    max-width: 264px;
     
+    margin-left: 185px;
 }
 /*--------------------------Portfolio.html--------------------------------*/
 /*--------------------------HEADER----------------------------------------*/
 /*--------------------------MAIN---------------------------------------*/
+.button{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    padding: 12px 0;
+    padding-top: 96px;
+    padding-bottom: 72px;
+  
+}
 .menu-items {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
@@ -264,10 +286,15 @@ address{
     color:#4d5ae5 ;
     cursor: pointer;
     background-color:#f4f4fd; 
+    border: 1px solid #E7E9FC;
+    border-radius: 4px;
 }
 .menu-items:hover {
     background-color: #404bbf;
     color: #ffffff;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    
 }
 /*--------------------------MAIN---------------------------------------*/
 .portfolio-content-text {
@@ -283,3 +310,24 @@ address{
     letter-spacing: 0.02em;
     color:#434455 ;
 }
+/* ------------------IMG---------------------------------- */
+.img-potfolio {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    gap: 24px;
+}
+.portfolio-sector{
+    display: flex;
+    flex-direction: column;
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
+.content {
+    border: 1px solid #E7E9FC;
+}
+.content-wrapper {
+    margin-bottom: 48px;
+}
+
+/* -------------------------IMG2-------------------------- */
