--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,11 @@ address{
      margin: 0 auto;
      /* background-color: #24b8ab; */
     }
+img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+    }
 /*--------------------------header----------------------------------------*/
 
 /*--------------------------header----------------------------------------*/
@@ -117,6 +122,12 @@ address{
     padding-top: 188px;
     padding-bottom: 188px;
 }
+.hero-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}    
+
 .caption {
     margin-bottom: 48px;
     text-align: center;
@@ -125,6 +136,7 @@ address{
     text-align: center;
     letter-spacing: 0.02em;
     color: #ffffff;
+    width: 496px;
 }
 .title-btn {
     min-width: 169px;
@@ -155,11 +167,9 @@ address{
     gap: 24px;
 }
 
-.container-section {
-
-}
-
 .aside-content {
+    font-family: 'Roboto';
+    font-style: normal;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -168,6 +178,9 @@ address{
     margin-bottom: 8px;
 }
 .aside-text {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
     font-size: 16px;
     line-height: 1.5; 
     letter-spacing: 0.02em;
@@ -186,7 +199,7 @@ address{
     display: flex;
     justify-content: center;
     gap: 24px;
-    padding: 120px;
+    padding-bottom: 120px;
 }
 /*--------------------------siction4--------------------------------------*/
 .team{
@@ -196,8 +209,8 @@ address{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0px 0px 32px;
-    gap: 32px;
+    padding-bottom: 120px;
+    gap: 24px;
 }
 .team-block{
     background-color: #ffffff;
@@ -220,6 +233,7 @@ address{
     line-height: 1.2;
     letter-spacing: 0.02em;
     color:#2e2f42 ;
+    margin-bottom: 8px;
 }
 .team-position {
     font-size: 16px;
