--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,9 @@ body {
     font-family: 'Roboto', sans-serif;
     color: #434455;
     font-style: normal;
-    background-color:#FFFFFF;}
+    background-color:#FFFFFF;
+    margin: 0;}
+ 
   
 .list {
     list-style: none;}
@@ -60,6 +62,7 @@ img {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    margin-right: 76px;
 }
 .header-studio {
     color: #2e2f42;}
@@ -69,13 +72,11 @@ img {
 }
     
 .menu-item-studio {
-    padding-left: 76px;
-}
+    margin-right: 40px;
+} 
 .menu-item-portfolio{
-    padding-left: 40px;}
-.menu-item-contacts {
-    padding-left: 40px;
-}
+    margin-right: 40px;}
+
 .menu-link {
     font-weight: 500;
     font-size: 16px;
@@ -97,8 +98,8 @@ img {
     justify-content: flex-end;
     align-items: center;
 }
-.socials-contacts{
-    margin-left: 40px; 
+.socials-mailto{
+    margin-right: 40px; 
     
    
 }
@@ -159,13 +160,22 @@ img {
 /*--------------------------siction2--------------------------------------*/
 
 .aside {
-    padding-top: 120px;
-    padding-bottom: 120px;
+    margin-top: 120px;
+    margin-bottom: 120px;
 }
 .aside-list{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
     gap: 24px;
+    
 }
+ .container-section {
+    
+  flex-basis: calc((100% - 3 * 240px) / 4);
+  
+} 
 
 .aside-content {
     font-family: 'Roboto';
@@ -176,6 +186,7 @@ img {
     letter-spacing: 0.02em;
     color:#2e2f42;
     margin-bottom: 8px;
+    
 }
 .aside-text {
     font-family: 'Roboto';
@@ -294,8 +305,8 @@ max-width:264px;
     align-items: center;
     gap: 24px;
     padding: 12px 0;
-    padding-top: 96px;
-    padding-bottom: 72px;
+    margin-top: 96px;
+    margin-bottom: 72px;
     
   
 }
@@ -340,7 +351,8 @@ max-width:264px;
     justify-content: space-around;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 24px;
+    row-gap: 48px;
+    column-gap: 24px;
     padding-bottom: 120px;
 }
 .portfolio-sector{
